# sirit

./: .gitignore  CMakeLists.txt  README.md
.ci/: changelog.sh  package.sh  sums.sh
.github/workflows/: build.yml  pr.yml  push.yml  release.yml  test.yml
CMakeModules/: siritConfig.cmake.in
include/sirit/: sirit.h
src/: CMakeLists.txt
src/instructions/: group.cpp
tests/: CMakeLists.txt
